page welcome and info

--- a/app/views/about/index.html.erb
+++ b/app/views/about/index.html.erb
@@ -67,9 +67,9 @@
                     </div>
 
                     <div class="col-md-7 col-md-pull-4">
-                        <h4 class="lg text-uppercase">WE ONLY MAKE AMBROSIAL MEAL</h4>
+                        <h4 class="lg text-uppercase">WE MAKE ALSO OTHER MEAL</h4>
                         <p>Venison spare ribs pork tail, beef meatloaf kielbasa turkey rump turducken beef ribs ground round sirloin kevin hamburger. Boudin ham hock chicken,. Leberkas ham sausage doner pastrami porchetta tri-tip boudin shankle. Meatball shoulder rump spare ribs tongue venison short ribs. Flank landjaeger brisket leberkas bacon kielbasa.</p>
-                        <a href="menu.html" class="awe-btn awe-btn-2 awe-btn-default text-uppercase">See menu</a>
+                        <%= link_to "See menu", {controller: "menu", action: "index"}, {class: "awe-btn awe-btn-2 awe-btn-default text-uppercase"} %>
                     </div>
                 </div>
             </div>
