edit image list contact pasge

--- a/app/views/info/index.html.erb
+++ b/app/views/info/index.html.erb
@@ -39,25 +39,25 @@
                 <div class="row">
                     <div class="col-md-12">
                         <div class="row">
-                            <div class="col-md-3">
+                            <div class="col-xs-6 col-md-3">
                                 <div class="image-wrap">
                                     <img src="/frontend/images/temp/1.jpg" alt="">
                                 </div>
                             </div>
 
-                            <div class="col-md-3">
+                            <div class="col-xs-6 col-md-3">
                                 <div class="image-wrap">
                                     <img src="/frontend/images/temp/2.jpg" alt="">
                                 </div>
                             </div>
 
-                            <div class="col-md-3">
+                            <div class="col-xs-6 col-md-3">
                                 <div class="image-wrap">
                                     <img src="/frontend/images/temp/3.jpg" alt="">
                                 </div>
                             </div>
 
-                            <div class="col-md-3">
+                            <div class="col-xs-6 col-md-3">
                                 <div class="image-wrap">
                                     <img src="/frontend/images/temp/4.jpg" alt="">
                                 </div>
