update contact page

--- a/app/views/info/index.html.erb
+++ b/app/views/info/index.html.erb
@@ -12,64 +12,7 @@
 
 <!-- PAGE WRAP -->
 <div id="page-wrap">
-  
-    <!-- ABOUT STORY -->
-    <section id="about-story" class="about-story section">
-        <div class="divider divider-2"></div>
-        <div class="container">
-            <div class="block-first">
-                <div class="row">
-                    <div class="col-md-5">
-                        <div class="image-wrap">
-                            <img src="/frontend/images/about/pho-01.jpg" alt="">
-                        </div>
-                    </div>
-
-                    <div class="col-md-6 col-md-offset-1">
-                        <h4 class="lg text-uppercase">HEALTHY FOOD IS FUTURE</h4>
-                        <h6 class="text-uppercase">Rind-Reisnudelsuppe (Vietnam's Nationalgericht)</h6>
-                        <h6 class="text-uppercase">Phở Bò / Main dish with Rice noodles soups!!!</h6>
-                        <p>In Vietnam wird sie in den vielen Garküchen auf den Strassen rund um die Uhr als Frühstück, Mittags- oder Nachtimbiss gegessen. Eine gute Phở Bò verlangt bei der Zubereitung viel Zeit und viele Zutaten. Das Geheimnis der Phở ist die Würzmischung, die jeder Suppenkoch anders zusammenstellt.</p>
-                        <p>Zutaten: Hausgemachte klare Rindbrühe mit breiten Reisnudeln, Rinderfilet, Zwiebeln, vietnamesischen Kräutern, Sojasprossen, dazu schmackhafte Rind-Bällchen.</p>
-                    </div>
-                </div>
-            </div>
-
-            <div class="block-last">
-                <div class="row">
-                    <div class="col-md-12">
-                        <div class="row">
-                            <div class="col-xs-6 col-md-3">
-                                <div class="image-wrap">
-                                    <img src="/frontend/images/temp/1.jpg" alt="">
-                                </div>
-                            </div>
-
-                            <div class="col-xs-6 col-md-3">
-                                <div class="image-wrap">
-                                    <img src="/frontend/images/temp/2.jpg" alt="">
-                                </div>
-                            </div>
-
-                            <div class="col-xs-6 col-md-3">
-                                <div class="image-wrap">
-                                    <img src="/frontend/images/temp/3.jpg" alt="">
-                                </div>
-                            </div>
-
-                            <div class="col-xs-6 col-md-3">
-                                <div class="image-wrap">
-                                    <img src="/frontend/images/temp/4.jpg" alt="">
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- ABOUT STORY -->
-  
+    
     <!-- CONTACT US -->
     <section id="contact" class="contact section">
 
@@ -108,13 +51,67 @@
         </div>
 
     </section>
-
     <!-- END / CONTACT US -->
+  
+    <!-- ABOUT STORY -->
+    <section id="about-story" class="about-story section">
+        <div class="divider divider-2"></div>
+        <div class="container">
+            <!--<div class="block-first">
+                <div class="row">
+                    <div class="col-md-5">
+                        <div class="image-wrap">
+                            <img src="/frontend/images/about/pho-01.jpg" alt="">
+                        </div>
+                    </div>
 
+                    <div class="col-md-6 col-md-offset-1">
+                        <h4 class="lg text-uppercase">HEALTHY FOOD IS FUTURE</h4>
+                        <h6 class="text-uppercase">Rind-Reisnudelsuppe (Vietnam's Nationalgericht)</h6>
+                        <h6 class="text-uppercase">Phở Bò / Main dish with Rice noodles soups!!!</h6>
+                        <p>In Vietnam wird sie in den vielen Garküchen auf den Strassen rund um die Uhr als Frühstück, Mittags- oder Nachtimbiss gegessen. Eine gute Phở Bò verlangt bei der Zubereitung viel Zeit und viele Zutaten. Das Geheimnis der Phở ist die Würzmischung, die jeder Suppenkoch anders zusammenstellt.</p>
+                        <p>Zutaten: Hausgemachte klare Rindbrühe mit breiten Reisnudeln, Rinderfilet, Zwiebeln, vietnamesischen Kräutern, Sojasprossen, dazu schmackhafte Rind-Bällchen.</p>
+                    </div>
+                </div>
+            </div>-->
+
+            <div class="block-last">
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="row">
+                            <div class="col-xs-6 col-md-3">
+                                <div class="image-wrap">
+                                    <img src="/frontend/images/temp/1.jpg" alt="">
+                                </div>
+                            </div>
+
+                            <div class="col-xs-6 col-md-3">
+                                <div class="image-wrap">
+                                    <img src="/frontend/images/temp/2.jpg" alt="">
+                                </div>
+                            </div>
+
+                            <div class="col-xs-6 col-md-3">
+                                <div class="image-wrap">
+                                    <img src="/frontend/images/temp/3.jpg" alt="">
+                                </div>
+                            </div>
+
+                            <div class="col-xs-6 col-md-3">
+                                <div class="image-wrap">
+                                    <img src="/frontend/images/temp/4.jpg" alt="">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- ABOUT STORY -->
 
     <!-- FOOTER -->
         <footer id="footer" class="footer">
-        <div class="divider divider-1 divider-color"></div>
         <div class="awe-color"></div>
         <div class="container">
             <div class="copyright text-center">
