--- a/public/frontend/stylesheets/custom.css
+++ b/public/frontend/stylesheets/custom.css
@@ -31,8 +31,15 @@ header.header .navigation ul.nav li a {
 }
 @media screen and (max-width: 480px) {
     .the-menu-item .the-menu-body {
-    overflow: hidden;
-    display: inline-block;
-    padding: 5px 0px;
-}
+        overflow: hidden;
+        display: inline-block;
+        padding: 5px 0px;
+    }
+    .about-story .block-first, .about-story .block-last {
+        margin: 20px 0;
+    }
+    .about-story .block-first .image-wrap img {
+        padding: 0 70px;
+        width: 100%;
+    }
 }
