update max-width logo and fix fax

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -30,7 +30,7 @@
             <div class="block-first">
                 <div class="row">
                     <div class="col-md-12 text-center">
-                        <h6 class="lg">Take Away - Asia Buffet - Catering - Lieferung</h6>
+                        <h4>Take Away - Asia Buffet - Catering - Lieferung</h4>
                         <%= link_to "CONTACT US", {controller: "info", action: "index"}, {class: "awe-btn awe-btn-2 awe-btn-default"} %>
                     </div>
                 </div>
