--- a/public/frontend/stylesheets/custom.css
+++ b/public/frontend/stylesheets/custom.css
@@ -42,3 +42,11 @@ header.header .navigation ul.nav li a {
         padding: 0 70px;
     }
 }
+.about-story .block-first .image-wrap img {
+   max-width: 300px
+}
+.contact-first .contact-body .address {
+    display: block;
+    font-size: 14px;
+    color: #fff;
+}
