--- a/app/views/info/index.html.erb
+++ b/app/views/info/index.html.erb
@@ -32,9 +32,10 @@
                                 <address class="address-wrap">
                                     <span class="phone">PHỞ SÀI GÒN 52</span>
                                     <span class="address">Zürcherstrasse 91, 8952 Schlieren, Switzerland</span>
-                                    <span class="address">Telefon: 043 495 00 22 - Fax: 043 495 00 22</span>
                                     <span class="address">Email: phosaigon52@gmail.com</span>
                                     <span class="address">Website: phosaigon52.ch</span>
+                                    <span class="address">Telefon: 043 495 00 22</span>
+                                    <span class="address">Fax: 043 495 00 22</span>
                                 </address>
                             </div>
 
@@ -79,37 +80,37 @@
                 <div class="row">
                     <div class="col-md-12">
                         <div class="row">
-                            <div class="col-xs-6 col-md-2">
+                            <div class="col-xs-6 col-sm-4 col-md-2">
                                 <div class="image-wrap">
                                     <img src="/frontend/images/temp/11.jpg" alt="">
                                 </div>
                             </div>
 
-                            <div class="col-xs-6 col-md-2">
+                            <div class="col-xs-6 col-sm-4 col-md-2">
                                 <div class="image-wrap">
                                     <img src="/frontend/images/temp/2.jpg" alt="">
                                 </div>
                             </div>
 
-                            <div class="col-xs-6 col-md-2">
+                            <div class="col-xs-6 col-sm-4 col-md-2">
                                 <div class="image-wrap">
                                     <img src="/frontend/images/temp/3.jpg" alt="">
                                 </div>
                             </div>
 
-                            <div class="col-xs-6 col-md-2">
+                            <div class="col-xs-6 col-sm-4 col-md-2">
                                 <div class="image-wrap">
                                     <img src="/frontend/images/temp/4.jpg" alt="">
                                 </div>
                             </div>
                             
-                            <div class="col-xs-6 col-md-2">
+                            <div class="col-xs-6 col-sm-4 col-md-2">
                                 <div class="image-wrap">
                                     <img src="/frontend/images/temp/1.jpg" alt="">
                                 </div>
                             </div>
                             
-                            <div class="col-xs-6 col-md-2">
+                            <div class="col-xs-6 col-sm-4 col-md-2">
                                 <div class="image-wrap">
                                     <img src="/frontend/images/temp/10.jpg" alt="">
                                 </div>
