--- a/public/frontend/stylesheets/custom.css
+++ b/public/frontend/stylesheets/custom.css
@@ -47,6 +47,9 @@ header.header .navigation ul.nav li a {
 }
 .contact-first .contact-body .address {
     display: block;
-    font-size: 14px;
+    font-size: 16px;
     color: #fff;
+}
+.contact-first .contact-body .address {
+    white-space: nowrap;
 }
