--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -1,7 +1,7 @@
 <header id="header" class="header header-2">
     <div class="container">
         <!-- LOGO -->
-        <div class="logo"><a href="#"><img src="images/logo-PhoSG52.png" alt=""></a></div>
+        <div class="logo"><%= link_to image_tag("/frontend/images/logo-PhoSG52.png"), {controller: "home", action: "index"} %></div>
         <!-- END / LOGO -->
 
         <!-- OPEN MENU MOBILE -->
