--- a/public/frontend/stylesheets/custom.css
+++ b/public/frontend/stylesheets/custom.css
@@ -1,12 +1,12 @@
 header.header .logo a img {
-    max-height: 88px;
+    max-height: 110px;
 }
 header.header .logo {
     float: left;
-    padding: 8px 0;
+    padding: 1px 0;
 }
 header.header .navigation {
-    padding: 30px 0;
+    padding: 34px 0;
 }
 header.header .navigation ul.nav li a {
     font-size: 15px;
@@ -52,4 +52,8 @@ header.header .navigation ul.nav li a {
 }
 .contact-first .contact-body .address {
     white-space: nowrap;
+}
+.no-line {
+    padding-top: 0px;
+    padding-bottom: 0px;
 }
